syntax = "proto3";

package wms;

// Определение структуры запроса
message GetTilesRequest {
  string boundingBoxWKT = 1;     // Географический прямоугольник в формате WKT
  repeated string tile_ids = 2;  // Список идентификаторов тайлов
  string format = 3;             // Формат изображения (например, png)
  repeated string layers = 4;    // Список слоев (например, "roads", "buildings")
  repeated string styles = 5;    // Список стилей отображения (например, "default", "night")
}

// Определение структуры ответа
message TileResponse {
  bytes image = 1;  // Изображение тайлов в бинарном формате
}

// Определение gRPC сервиса
service TileService {
  // Метод для получения тайлов
  rpc GetTiles(GetTilesRequest) returns (TileResponse);
}
